--- a/portfolio-project/jobs/templates/jobs/detail.html
+++ b/portfolio-project/jobs/templates/jobs/detail.html
@@ -25,39 +25,14 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Sanjay Yellambalase Ravikumar</h1>
-          <p class="lead text-muted">Software Developer</p>
+          <h1 class="jumbotron-heading">Job Detail</h1>
+          <p class="lead text-muted">{{ job.summary }}</p>
+          <img src="{{ job.image.url }}" height=200 width=600></img>
           <p>
-            <a href="mailto:sanjayyriit@gmail.com" class="btn btn-primary my-2">Email me</a>
-            <a href="https://www.linkedin.com/in/sanjayyr" class="btn btn-primary my-2">LinkedIn</a>
-            <a href="https://github.com/SanjayYr" class="btn btn-primary my-2">Github</a>
+            <a href="{% url 'home' %}" class="btn btn-primary my-2">Back</a>
           </p>
-          <img src="{% static 'sanjay.jpg' %}" height=300></img>
         </div>
       </section>
-
-      <div class="album py-5 bg-light">
-        <div class="container">
-
-          <div class="row">
-
-          	{% for job in jobs.all %}
-
-            <div class="col-md-4">
-              <a href="{% url 'detail' job.id %}">
-	              <div class="card mb-4 box-shadow">
-	                <img class="card-img-top" src="{{ job.image.url }}">
-	                <div class="card-body">
-	                  <p class="card-text">{{ job.summary }}</p>
-	                </div>
-	              </div>
-          	  </a>
-            </div>
-
-            {% endfor %}
-          </div>
-        </div>
-      </div>
 
     </main>
 
